[package]
name = "tkit"
version = "0.1.0"
authors = ["Thembinkosi Mkhonta (thembinkosimkhonta01@gmail.com)"]
edition = "2024"

description = "A toolkit for managing tasks"
license = "MIT"
homepage = "https://github.com/thembinkosimkhonta01/tkit"
repository = "https://github.com/thembinkosimkhonta01/tkit"
readme = "README.md"
keywords = ["task", "management", "toolkit"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
clap = {version = "4.5.48", features = ["derive"]}
serde = {version = "1.0.227", features = ["derive"]}
anyhow = "1.0.100"
colored = "3.0.0"
dirs = "6.0.0"
serde_yaml = "0.9.34"
tokio = {version = "1.47.1", features = ["full"]}

[[bin]]
name = "tkit"
path = "src/main.rs"
